# repolens

./: .env.example.api  .env.example.web  .env.example.worker  .gitignore  ARCHITECTURE.md  BLUEPRINT_PLAN.md  CLOUD_SETUP.md  COMBINED_DEPLOYMENT.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile.combined  FLY_DEPLOYMENT.md  GEMINI.md  GETTING_STARTED.md  PRD.md  PROJECT_STATUS.md  README.md  START_HERE.md  TODO.md  copilot-instructions.md  copilot-session-7dbb443e-20e1-44f6-84d4-7171f20cb15c.md  copilot-session-d9037f39-0424-40b2-8bfd-b13fbb6d7c74.md  copilot-session-deployment-jan22-2026.md  docker-compose.yml  package-lock.json  package.json  pinecone-llmx.txt  pnpm-lock.yaml  render-api.yaml  render-combined.yaml  render.yaml  setup.sh  start-combined.sh  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: .env.example.api  Dockerfile  jest.config.js  package.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/oxidizer/: Cargo.toml
apps/oxidizer/src/: analyzer.rs  complexity.rs  graph.rs  main.rs
apps/web/: .env.example.web  next.config.js  package.json  tailwind.config.js
apps/worker/: .env.example.worker  Dockerfile  OPENROUTER_SETUP.md  fly.toml  requirements.txt  start.sh  worker.py
apps/worker/api/: Dockerfile  package.json
apps/worker/tests/: test_dead_code.py
apps/worker/web/: next.config.js  package.json  tsconfig.json
docs/: ADR-004-code-execution-sandbox.md  EC2_DEPLOYMENT.md  TECHNICAL_DEBT_LOG.md
prisma/: schema.prisma
(+118 files in other folders)
