[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# OXC: The High-Performance Oxidation Compiler
oxc_parser = "0.110.0"
oxc_allocator = "0.110.0"
oxc_span = "0.110.0"
oxc_ast = "0.110.0"

# Serialization & Parallelism
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rayon = "1.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
